fix(ui): left and right scrollbar removed, added scrollbar styles

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -145,8 +145,7 @@ div[class^='sidebar_']
 }
 
 .menu {
-  padding: 0 !important;
-  @apply !p-0;
+  @apply !p-0 overflow-y-auto;
 }
 
 /* Optional style for only one link which acts as nav section header */
@@ -314,4 +313,36 @@ html[data-theme='dark'] .sl-text-warning {
 
 .sl-text-danger {
   @apply !text-red-500;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--docs-color-background);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--docs-color-border);
+  border-radius: 6px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--docs-color-text-100);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.thin-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.thin-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
